# server.js
@@ -8,9 +8,7 @@ dotenv.config();
 const app = express();
 
 app.use(express.json());
-app.get("/", (req, res) => res.send("API running..."));
 
-// Swagger docs route
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 mongoose
@@ -26,11 +24,11 @@ const categoryRoutes = require("./routes/categoryRoutes");
 const cartRoutes = require("./routes/cartRoutes");
 
 app.use("/auth", authRoutes);
-app.use("/api/users", userRoutes);
-app.use("/api/products", productRoutes);
-app.use("/api/orders", orderRoutes);
-app.use("/api/categories", categoryRoutes);
-app.use("/api/carts", cartRoutes);
+app.use("/users", userRoutes);
+app.use("/products", productRoutes);
+app.use("/orders", orderRoutes);
+app.use("/categories", categoryRoutes);
+app.use("/carts", cartRoutes);
 
 const PORT = process.env.PORT || 5000;
 app.listen(PORT, "0.0.0.0", () => console.log(`Server running on ${PORT}`));
